WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194717
Regression(PSON) Navigating quickly back and forth can lead to getting 'about:blank' in the backforward list
https://bugs.webkit.org/show_bug.cgi?id=194717
Summary
Regression(PSON) Navigating quickly back and forth can lead to getting 'about...
Chris Dumez
Reported
2019-02-15 12:01:33 PST
Navigating quickly back and forth can lead to getting 'about:blank' in the backforward list when PSON is enabled.
Attachments
Patch
(13.38 KB, patch)
2019-02-15 12:18 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-02-15 12:01:50 PST
<
rdar://problem/47884404
>
Chris Dumez
Comment 2
2019-02-15 12:18:36 PST
Created
attachment 362144
[details]
Patch
WebKit Commit Bot
Comment 3
2019-02-15 13:03:59 PST
Comment on
attachment 362144
[details]
Patch Clearing flags on attachment: 362144 Committed
r241606
: <
https://trac.webkit.org/changeset/241606
>
WebKit Commit Bot
Comment 4
2019-02-15 13:04:00 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug